--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,176 +1,228 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/Root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.gectaurus.calculatordam.MainActivity" >
-
-    <GridLayout
-        android:id="@+id/gridLayout1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginBottom="33dp"
-        android:layout_toLeftOf="@+id/button13"
-        android:columnCount="4"
-        android:rowCount="4" >
-
+ 
+    <LinearLayout
+        android:id="@+id/row1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".12" >
+ 
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:maxLines="1"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="0"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textSize="40sp" />
+    </LinearLayout>
+ 
+    <LinearLayout
+        android:id="@+id/row3"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".12" >
+ 
         <Button
-            android:id="@+id/button1"
-            android:layout_gravity="left"
-            android:text="@string/Number7" />
-
+            android:id="@+id/buttonDel"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".25"
+            android:text="@string/Backspace"
+            android:textSize="25sp" />
+ 
         <Button
-            android:id="@+id/button2"
-            android:layout_gravity="left"
-            android:text="@string/Number8" />
-
+            android:id="@+id/buttonClear"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".25"
+            android:text="@string/SymbolAC"
+            android:textSize="25sp" />
+ 
         <Button
-            android:id="@+id/button3"
-            android:layout_gravity="left"
-            android:text="@string/Number9" />
-
+            android:id="@+id/buttonDivide"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".25"
+            android:text="@string/Symboldivide"
+            android:textSize="25sp" />
+ 
         <Button
-            android:id="@+id/button8"
-            android:layout_column="3"
-            android:layout_gravity="center_horizontal|top"
-            android:layout_row="1"
-            android:text="@string/Symbolmultiply" />
-
-        <Button
-            android:id="@+id/button9"
-            android:layout_column="2"
-            android:layout_gravity="left|top"
-            android:layout_row="2"
-            android:text="@string/Number3" />
-
-        <Button
-            android:id="@+id/Button02"
-            android:layout_column="1"
-            android:layout_gravity="left|top"
-            android:layout_row="3"
-            android:text="@string/Number0" />
-
-        <Button
-            android:id="@+id/Button04"
-            android:layout_column="3"
-            android:layout_gravity="center_horizontal|top"
-            android:layout_row="3"
-            android:text="@string/Symboladd" />
-
-        <Button
-            android:id="@+id/Button03"
-            android:layout_width="wrap_content"
-            android:layout_column="2"
-            android:layout_gravity="left|top"
-            android:layout_row="3"
-            android:text="@string/Delete" />
-
-        <Button
-            android:id="@+id/button12"
-            android:layout_column="3"
-            android:layout_gravity="center_horizontal|top"
-            android:layout_row="2"
-            android:text="@string/Symbolsubtract" />
-
-        <Button
-            android:id="@+id/button10"
-            android:layout_column="1"
-            android:layout_gravity="left|top"
-            android:layout_row="2"
-            android:text="@string/Number2" />
-
-        <Button
-            android:id="@+id/Button01"
-            android:layout_column="0"
-            android:layout_gravity="left|top"
-            android:layout_row="3"
-            android:text="@string/Symboldot" />
-
-        <Button
-            android:id="@+id/button11"
-            android:layout_column="0"
-            android:layout_gravity="left|top"
-            android:layout_row="2"
-            android:text="@string/Number1" />
-
-        <Button
-            android:id="@+id/button4"
-            android:layout_column="3"
-            android:layout_gravity="center_horizontal|top"
-            android:layout_row="0"
-            android:text="@string/Symboldivide" />
-
-        <Button
-            android:id="@+id/button5"
-            android:layout_column="2"
-            android:layout_gravity="left|top"
-            android:layout_row="1"
-            android:text="@string/Number6" />
-
-        <Button
-            android:id="@+id/button6"
-            android:layout_column="1"
-            android:layout_gravity="left|top"
-            android:layout_row="1"
-            android:text="@string/Number5" />
-
+            android:id="@+id/buttonMultiply"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".25"
+            android:text="@string/Symbolmultiply"
+            android:textSize="25sp" />
+    </LinearLayout>
+ 
+    <LinearLayout
+        android:id="@+id/row4"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".12" >
+ 
         <Button
             android:id="@+id/button7"
-            android:layout_column="0"
-            android:layout_gravity="left|top"
-            android:layout_row="1"
-            android:text="@string/Number4" />
-
-    </GridLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" >
-
-        <EditText
-            android:id="@+id/editText1"
-            android:layout_width="346dp"
-            android:layout_height="106dp"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:inputType="number"
-            android:textSize="40sp" >
-
-            <requestFocus />
-        </EditText>
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".25"
+            android:text="@string/Number7"
+            android:textSize="25sp" />
+ 
+        <Button
+            android:id="@+id/button8"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".25"
+            android:text="@string/Number8"
+            android:textSize="25sp" />
+ 
+        <Button
+            android:id="@+id/button9"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".25"
+            android:text="@string/Number9"
+            android:textSize="25sp" />
+ 
+        <Button
+            android:id="@+id/buttonSubtract"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".25"
+            android:text="@string/Symbolsubtract"
+            android:textSize="25sp" />
     </LinearLayout>
-
-    <Button
-        android:id="@+id/button13"
-        android:layout_width="wrap_content"
-        android:layout_height="193dp"
-        android:layout_alignBottom="@+id/gridLayout1"
-        android:layout_alignParentRight="true"
-        android:text="@string/Symbolequal" />
-
+ 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button13"
-        android:layout_alignLeft="@+id/gridLayout1"
-        android:layout_marginBottom="46dp"
-        android:orientation="vertical" >
-
-        <EditText
-            android:id="@+id/EditText01"
-            android:layout_width="346dp"
-            android:layout_height="106dp"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:inputType="number"
-            android:textSize="40sp" />
-
+        android:id="@+id/row5"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".12" >
+ 
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".25"
+            android:text="@string/Number4"
+            android:textSize="25sp" />
+ 
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".25"
+            android:text="@string/Number5"
+            android:textSize="25sp" />
+ 
+        <Button
+            android:id="@+id/button6"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".25"
+            android:text="@string/Number6"
+            android:textSize="25sp" />
+ 
+        <Button
+            android:id="@+id/buttonAdd"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".25"
+            android:text="@string/Symboladd"
+            android:textSize="25sp" />
     </LinearLayout>
-
-</RelativeLayout>
+ 
+    <LinearLayout
+        android:id="@+id/row6"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".24"
+        android:baselineAligned="false" >
+ 
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".75"
+            android:orientation="vertical" >
+ 
+            <LinearLayout
+                android:id="@+id/linearLayout1"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight=".50"
+                android:textSize="25sp" >
+ 
+                <Button
+                    android:id="@+id/button1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".33"
+                    android:text="@string/Number1"
+                    android:textSize="25sp" />
+ 
+                <Button
+                    android:id="@+id/button2"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".33"
+                    android:text="@string/Number2"
+                    android:textSize="25sp" />
+ 
+                <Button
+                    android:id="@+id/button3"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".33"
+                    android:text="@string/Number3"
+                    android:textSize="25sp" />
+            </LinearLayout>
+ 
+            <LinearLayout
+                android:id="@+id/linearLayout2"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight=".50" >
+ 
+                <Button
+                    android:id="@+id/button0"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".66"
+                    android:text="@string/Number0"
+                    android:textSize="25sp" />
+ 
+                <Button
+                    android:id="@+id/buttonDot"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".33"
+                    android:text="@string/Symboldot"
+                    android:textSize="25sp" />
+            </LinearLayout>
+        </LinearLayout>
+ 
+        <Button
+            android:id="@+id/buttonEquals"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".25"
+            android:text="@string/Symbolequal"
+            android:textSize="25sp" />
+    </LinearLayout>
+ 
+</LinearLayout>
