--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -12,9 +12,28 @@
         -->
     </style>
 
+    <color name="black">#000</color>
+    <color name="white">#FFF</color>
+    
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+    	<item name="android:windowBackground">@color/black</item>
+    	<item name="android:colorBackground">@color/black</item>
+    	<item name="android:textColor">@color/white</item>
+    	<item name="android:buttonStyle">@style/button_text</item>
     </style>
+    
+    <style name="button_text" parent="@android:style/Widget.Button">
+       <item name="android:textSize">15sp</item>
+       <item name="android:textStyle">bold</item>
+       <item name="android:textColor">#FFFFFF</item>
+       <item name="android:gravity">center</item>
+       <item name="android:shadowColor">#000000</item>
+       <item name="android:shadowDx">1</item>
+       <item name="android:shadowDy">1</item>
+       <item name="android:shadowRadius">0.6</item>
+       <item name="android:background">@drawable/button_draw</item>
+       <item name="android:padding">10dip</item>
+   </style>
 
 </resources>
