--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,22 +1,11 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!--
-        Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-    -->
-    <style name="AppBaseTheme" parent="android:Theme.Light">
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
-    </style>
 
     <color name="black">#000</color>
     <color name="white">#FFF</color>
     
     <!-- Application theme. -->
-    <style name="AppTheme" parent="AppBaseTheme">
+    <style name="AppTheme" parent="@android:style/Theme.Holo">
     	<item name="android:windowBackground">@color/black</item>
     	<item name="android:colorBackground">@color/black</item>
     	<item name="android:textColor">@color/white</item>
